<resources>
    <string name="app_name">Buzo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="zip_directory">Buzo.ly_data</string>
    <string name="watermark">watermark.gif</string>

    <string name="label_done">Done</string>
    <string name="permission_title">Uh oh!</string>
    <string name="require_permission">This app needs storage permission.</string>
    <string name="allow_access">Allow Access</string>
    <string name="label_photos">Photos</string>
    <string name="gallery_all_photos">All Photos</string>
    <string name="videos">Videos</string>
    <string name="quotes">Quotes</string>
    <string name="setting">Settings</string>
    <string name="my_videos">My videos</string>
    <string name="favorites">favorites</string>
    <string name="share_app">share App</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="follow_us_on">follow us on</string>
    <string name="sort_videos_by">sort videos by</string>
    <string name="random">Random</string>
    <string name="new_text">New</string>
    <string name="popular">Popular</string>
    <string name="oldest">Oldest</string>
    <string name="search">Search</string>
    <string name="Ok" />
    <string name="all_category">All Category</string>
    <string name="video_export_text">Crafting your video… Please wait a moment!</string>
    <string name="rate_app">Rate App</string>
    <string name="check_for_update">Check For Update</string>
    <string name="explore">Explore</string>
    <string name="suggestions">Quotes Suggestions</string>
    <string name="explore_list">Categories:-</string>
    <string name="video_suggestions">Video Suggestions</string>
    <string name="home">Home</string>
    <string name="saved_in_gallery">Saved In Gallery</string>
    <string name="media_picker_select_from">Select From:</string>
    <string name="media_picker_camera">Camera</string>
    <string name="media_picker_gallery">Gallery</string>
    <string name="media_picker_ok">Ok</string>
    <string name="media_picker_cancel">Cancel</string>
    <string name="media_picker_some_permission_is_denied">Some Permission is Denied</string>
    <string name="media_picker_you_need_to_grant_access_to">You need to grant access to</string>
    <string name="media_picker_read_Write_external_storage"><![CDATA[Read & Write External Storage]]></string>
    <string name="privacy_policy_url">https://sites.google.com/view/buzo-privacy-?usp=sharing</string>
    <string name="insta_page_url">https://instagram.com/boozz.app?igshid=MzRlODBiNWFlZA==</string>
    <string name="fb_page_url">https://www.facebook.com/profile.php?id=61551911502720&amp;mibextid=ZbWKwL</string>
    <string name="my_videos_new">My Videos</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <!-- Privacy Policy Dialog-->
    <string name="tv_decline_policy">Disagree</string>
    <string name="cv_accept_policy">Agree</string>
    <string name="terms1">Dear users, we are just a platform to make variety of templates, we are not liable for any misuse or misconduct from any of the user, we are not bound by any legal aspects or liability, user will be responsible and liable for all the uses.</string>
    <string name="terms2">We believe our security steps are at least as stringent as yours would be. As a matter of practical business necessity, we can not be responsible for any damage caused by any problems that may arise as a result of your or anyone\'s use of our app or the services we provide whether or not we are at fault unless such problem is caused by our intentional misconduct as outlined by this disclaimer which is written by our lawyers.</string>
    <string name="terms3">This app only asks for the storage permission to ready your image files and save videos created by you and this app won\'t use this permission for any other purpose than mentioned</string>
    <string name="terms4">Clicking on AGREE button you agree to the above mentioned conditions.</string>


    <string name="lib_rate_dialog_tip">We are working hard for a better user experience.\n We’d greatly appreciate if you can rate us.</string>
    <string name="lib_rate_like_you">We like you too!</string>
    <string name="lib_rate_love_it">Loved it</string>
    <string name="lib_rate_oh_no">Oh, no!</string>
    <string name="lib_rate_five_stars_tip">The best we can get :)</string>
    <string name="lib_rate_btn_rate">Rate Now</string>
    <string name="lib_rate_leave_feedback">Please leave us some feedback.</string>
    <string name="lib_rate_thanks_feedback">Thanks for your feedback.</string>
    <string name="lib_rate_btn_go_market">Rate on Google play</string>

    <string name="fb_app_id">673194911450571</string>
    <string name="facebook_client_token">5f0845f8ca4e453a59559e6bec245a75</string>
    <!--Here Facebook Interstitial Ads IDs-->
    <!--  <string name="fb_app_id">511315357511616</string>
      <string name="facebook_client_token">7087a35412356cb4c5130113d20505ba</string>
      <string name="FB_DashbordTamplate_Inter">511315357511616_664756555500828</string>
      <string name="FB_INQuotecatagory_Inter_2Tap">511315357511616_511980844111734</string>
      <string name="FB_In_CatagoryTamplate_Inter_1Tap">511315357511616_664758872167263</string>
      <string name="FB_InQuote_List_Inter">511315357511616_664752545501229</string>
      <string name="FB_Catagory_Inter">511315357511616_664758525500631</string>
      <string name="FB_Setting_Inter">511315357511616_511980070778478</string>
      <string name="FB_Serch_Inter">511315357511616_511980184111800</string>
      <string name="FB_VideoSave_Share_Inter">511315357511616_664754972167653</string>
      <string name="FB_Explore_Inter">511315357511616_511976990778786</string>
      <string name="FB_Explore_Quotes_Inter">511315357511616_511976990778786</string>-->


    <!--Here Google Ads IDs-->
    <string name="app_id">ca-app-pub-5767198334006972~6410586058</string>
    <string name="GL_DashbordTamplatelist_Native">ca-app-pub-5767198334006972/6961250392</string>
    <string name="GL_SerchList_Native">ca-app-pub-5767198334006972/8370249570</string>
    <string name="GL_Setting_MyVideoList_Native">ca-app-pub-5767198334006972/8673501903</string>
    <string name="GL_InQuote_list_Native">ca-app-pub-5767198334006972/6584440908</string>
    <string name="GL_INcatagory_Tamplatelist_Native">ca-app-pub-5767198334006972/2938244908</string>
    <string name="GL_Tamplate_Create_Native">ca-app-pub-5767198334006972/5079787543</string>

    <!--Banner Ads IDs-->
    <string name="GL_Setting_Banner">ca-app-pub-5767198334006972/3105765867</string>
    <string name="GL_Playtamplate_Banner">ca-app-pub-5767198334006972/7705950882</string>
    <string name="GL_Dashbord_Banner">ca-app-pub-5767198334006972/9300187865</string>
    <string name="GL_InQuotepreview_Banner">ca-app-pub-5767198334006972/8465903756</string>
    <string name="GL_InQuote_Banner">ca-app-pub-5767198334006972/4748615057</string>
    <string name="GL_Setting_MyVideoList_Banner">ca-app-pub-5767198334006972/2836767581</string>
    <string name="Gl_Setting_MyvideoPreview_Banner">ca-app-pub-5767198334006972/5755979934</string>
    <string name="GL_Quote_Catagory_Banner">ca-app-pub-5767198334006972/4770201323</string>
    <string name="GL_Quote_Explore_Screen_Banner">ca-app-pub-5767198334006972/3435533381</string>
    <string name="GL_InExplore_Banner">ca-app-pub-5767198334006972/7183206702</string>
    <string name="GL_Tamplate_Making_Banner">ca-app-pub-5767198334006972/8304716683</string>
    <string name="GL_Catagory_Banner">ca-app-pub-5767198334006972/9447812938</string>
    <string name="GL_VideoSave_Banner">ca-app-pub-5767198334006972/8629555280</string>
    <string name="GL_Serch_Banner">ca-app-pub-5767198334006972/9970557119</string>
    <string name="GL_Image_crop_Banner">ca-app-pub-5767198334006972/2453624202</string>


    <!--Interstitial Ads IDs-->

    <!--Reward Ads IDs-->
    <string name="GL_RewardPremium">ca-app-pub-5767198334006972/4365471679</string>
    <string name="RewardWatermark">ca-app-pub-5767198334006972/9751065266</string>

    <!--Interestitial Ads IDs-->
    <string name="GL_DashbordTamplate_Inter">ca-app-pub-5767198334006972/6825519029</string>
    <string name="GL_INQuotecatagory_Inter_2TAP">ca-app-pub-5767198334006972/7152822081</string>
    <string name="GL_In_CatagoryTamplate_Inter_1Tap">ca-app-pub-5767198334006972/3038031841</string>
    <string name="GL_InQuote_List_Inter">ca-app-pub-5767198334006972/5839740419</string>
    <string name="GL_Catagory_Inter">ca-app-pub-5767198334006972/1749000907</string>
    <string name="GL_Setting_Inter">ca-app-pub-5767198334006972/7459943842</string>
    <string name="GL_Serch_Inter">ca-app-pub-5767198334006972/4442898262</string>
    <string name="GL_VideoSave_Share_Inter">ca-app-pub-5767198334006972/3129816593</string>
    <string name="GL_Explore_Inter">ca-app-pub-5767198334006972/8178677889</string>
    <string name="GL_Explore_Quotes_Inter">ca-app-pub-5767198334006972/9942636958</string>


</resources>