<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/app_background_color"
        android:paddingStart="@dimen/_20sdp">

        <ImageView
            android:id="@+id/ivSettingBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back_icon" />

        <com.example.boozzapp.controls.CTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@color/app_background_color"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMyVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/video_icon" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/my_videos"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/share_icon" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/share_app"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/privacy_icon" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/privacy_policy"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llRateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ratting_icon" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/rate_app"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llCheckUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/update_icon" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/check_for_update"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.example.boozzapp.controls.CTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/follow_us_on"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/_20sdp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivInstagram"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:src="@drawable/insta_icon" />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:src="@drawable/fb_icon" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <com.google.android.gms.ads.AdView
            android:id="@+id/settingBannerAdView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_gravity="bottom"
            android:visibility="gone"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/GL_Setting_Banner" />

        <TextView
            android:id="@+id/adSearchLoadingText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Loading ad..."
            android:visibility="visible" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>