<!-- activity_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    tools:context=".activities.ExploreQuotesActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:background="@color/app_background_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivQuoteCatBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/back_icon" />

        <com.example.boozzapp.controls.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/explore"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/suggestions"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExploreQuotesVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_explore_quote_list" />

            <com.example.boozzapp.controls.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/explore_list"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/_12sdp"
                app:chipSpacingVertical="@dimen/_7sdp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>
